# pdfquery

./: .gitignore  Dockerfile  Makefile  README.md  USAGE.md  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker-test.yml  docker.yml
pdfquery/: cli.py  embedding.py  index.py
pdfquery/tests/: conftest.py  test_chunking.py  test_index_build.py  test_query_index.py
